# metacooc

./: LICENSE  README.md  __main__.py  meta.yaml  metacooccur.py  pyproject.toml  setup.py
.github/workflows/: release.yml
metacooc/: __init__.py  __main__.py  _data_config.py  analysis.py  cli.py  clustering.py  download.py  filter.py  format.py  null_models.py  pantry.py  pipelines.py  plot.py  ratios.py  search.py  setup_database.py  structure.py  utensils.py  utils.py  version.py
metacooc/prelim_files/: MetaCoOccur.ipynb  README.md  main.py
metacooc/utils/: parse_merge_sra_metadata.py
