[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "metacooc"
dynamic = ["version"]
description = "Tool for co-occurrence analysis of microorganisms in metagenomes"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [
    {name = "Benjamin Coltman", email = "benjamin.coltman@univie.ac.at"},
	{name = "Daan Speth", email = "daan.speth@univie.ac.at"}
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
	"scipy",
    "matplotlib"
]
keywords = ["metagenomics","co-occurrence","bioinformatics"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[tool.setuptools.dynamic]
version = { attr = "metacooc.version.__version__" }

[project.urls]
Homepage = "https://github.com/bcoltman/metacooc"
Documentation = "https://metacooc.readthedocs.io"
Source = "https://github.com/bcoltman/metacooc"
Tracker = "https://github.com/bcoltman/metacooc/issues"

[project.optional-dependencies]
dev = ["pytest", "black", "isort", "mypy"]

[project.scripts]
metacooc = "metacooc.__main__:main"

[tool.setuptools]
packages = ["metacooc"]
include-package-data = true
